--- a/apollo-portal/src/main/resources/application.yml
+++ b/apollo-portal/src/main/resources/application.yml
@@ -1,28 +1,43 @@
 spring:
-  application:
-    name: apollo-portal
   profiles:
     active: ${apollo_profile}
-  jpa:
-    properties:
-      hibernate:
-        query:
-          plan_cache_max_size: 192 # limit query plan cache max size
-
-server:
-  port: 8070
-  compression:
-    enabled: true
-  tomcat:
-    use-relative-redirects: true
+  cloud:
+    consul:
+      enabled: false
+    inetutils:
+      timeout-seconds: 15
 
 logging:
+  level:
+    root: debug
   file:
-    name: /opt/logs/100003173/apollo-portal.log
+    name: /opt/logs/100003171/apollo-assembly.log
 
 management:
   health:
     status:
       order: DOWN, OUT_OF_SERVICE, UNKNOWN, UP
     ldap:
-      enabled: false # disable ldap health check by default
+      enabled: false
+
+eureka:
+  instance:
+    #    hostname: ${hostname:localhost}
+    hostname: ${hostname:localhost}
+    preferIpAddress: true
+    status-page-url-path: /infoorganizations
+    health-check-url-path: /health
+  server:
+    peerEurekaNodesUpdateIntervalMs: 60000
+    enableSelfPreservation: false
+    eviction-interval-timer-in-ms: 20000
+  client:
+    serviceUrl:
+      # This setting will be overridden by eureka.service.url setting from ApolloConfigDB.ServerConfig or System Property
+      # see com.ctrip.framework.apollo.biz.eureka.ApolloEurekaClientConfig
+      defaultZone: http://localhost:8080/eureka
+    #      defaultZone: http://${eureka.instance.hostname}:8080/eureka/
+    healthcheck:
+      enabled: true
+    eurekaServiceUrlPollIntervalSeconds: 10000
+
